[package]
edition = "2024"
name = "blinky"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-nxp = { version = "0.1.0", features = ["lpc55-core0", "rt", "defmt", "time-driver-rtc"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "tick-hz-32_768"] }
panic-halt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0"}
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
panic-semihosting = "0.6.0"

[patch.crates-io]
embassy-nxp = { git = "https://github.com/embassy-rs/embassy", rev = "88de32c168216c98259380f76edc54ec49e1a81a" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "88de32c168216c98259380f76edc54ec49e1a81a" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "88de32c168216c98259380f76edc54ec49e1a81a" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "88de32c168216c98259380f76edc54ec49e1a81a" }

[profile.release]
debug = 2
